[gd_scene load_steps=19 format=3 uid="uid://bxuc72e3xafyq"]

[ext_resource type="Texture2D" uid="uid://8i38d1t38sve" path="res://src/img/level/kedai.png" id="1_ai3ib"]
[ext_resource type="Script" uid="uid://ct3oaurwtin5s" path="res://script/kedai.gd" id="1_vy6p4"]
[ext_resource type="Texture2D" uid="uid://m3dgd7pyaw66" path="res://src/img/character/npc/pedagang.png" id="3_jbty7"]
[ext_resource type="Texture2D" uid="uid://dyqeb3rehe7sb" path="res://src/img/ui/speechBubble.png" id="4_jhk31"]
[ext_resource type="Texture2D" uid="uid://cg7h3w0id4036" path="res://src/img/character/alif/idle/idle1.png" id="4_k7x4u"]
[ext_resource type="Texture2D" uid="uid://b24b4qwa3wemo" path="res://src/img/character/alif/idle/idle2.png" id="5_upybt"]
[ext_resource type="Texture2D" uid="uid://coy82bpa57fvn" path="res://src/img/character/alif/idle/idle3.png" id="6_672jn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jbty7"]
size = Vector2(15, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jhk31"]
size = Vector2(47, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n4ld3"]
size = Vector2(15, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nplra"]
size = Vector2(47, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k7x4u"]
size = Vector2(99, 87)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhk31"]
atlas = ExtResource("3_jbty7")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4ld3"]
atlas = ExtResource("3_jbty7")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nplra"]
atlas = ExtResource("3_jbty7")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7x4u"]
atlas = ExtResource("3_jbty7")
region = Rect2(192, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_upybt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_k7x4u")
}, {
"duration": 1.0,
"texture": ExtResource("5_upybt")
}, {
"duration": 1.0,
"texture": ExtResource("6_672jn")
}, {
"duration": 1.0,
"texture": ExtResource("5_upybt")
}],
"loop": true,
"name": &"Alif",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhk31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4ld3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nplra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7x4u")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_672jn"]
radius = 460.68546

[node name="kedai" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_vy6p4")

[node name="Sprite2D5" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 1
position = Vector2(-0.5, -50.5)
scale = Vector2(2.2826085, 1.978261)
texture = ExtResource("1_ai3ib")
region_enabled = true
region_rect = Rect2(33, 97, 46, 46)

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 5
texture_filter = 1
position = Vector2(0, -90)
texture = ExtResource("1_ai3ib")
region_enabled = true
region_rect = Rect2(10, 6, 59, 62)

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-35.000004, -80)
texture = ExtResource("1_ai3ib")
region_enabled = true
region_rect = Rect2(129, 14, 14, 33)

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2D2" groups=["objek"]]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D2/StaticBody2D"]
position = Vector2(0.5, 2)
shape = SubResource("RectangleShape2D_jbty7")

[node name="Sprite2D3" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(36, -81.5)
scale = Vector2(1, 0.9117647)
texture = ExtResource("1_ai3ib")
region_enabled = true
region_rect = Rect2(145, 13, 14, 34)

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2D3" groups=["objek"]]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D3/StaticBody2D"]
position = Vector2(0.5, 2)
shape = SubResource("RectangleShape2D_jbty7")

[node name="Sprite2D4" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -48)
texture = ExtResource("1_ai3ib")
region_enabled = true
region_rect = Rect2(80, 15, 48, 34)

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite2D4" groups=["objek"]]
position = Vector2(0, -42)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D4/StaticBody2D"]
position = Vector2(-0.5, 49.5)
shape = SubResource("RectangleShape2D_jhk31")

[node name="StaticBody2D2" type="StaticBody2D" parent="Sprite2D4" groups=["objek"]]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D4/StaticBody2D2"]
position = Vector2(-16.5, -14)
shape = SubResource("RectangleShape2D_n4ld3")

[node name="StaticBody2D3" type="StaticBody2D" parent="Sprite2D4" groups=["objek"]]
position = Vector2(32, 0)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D4/StaticBody2D3"]
position = Vector2(-16.5, -14)
shape = SubResource("RectangleShape2D_n4ld3")

[node name="AreaInteraksi" type="Area2D" parent="Sprite2D4" groups=["interaksiToko"]]
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D4/AreaInteraksi"]
position = Vector2(-0.5, 6.5)
shape = SubResource("RectangleShape2D_nplra")

[node name="zonaAman" type="StaticBody2D" parent="Sprite2D4"]
collision_layer = 256
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D4/zonaAman"]
position = Vector2(-0.5, -2.5)
shape = SubResource("RectangleShape2D_k7x4u")

[node name="penjual" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
texture_filter = 1
position = Vector2(-32.000004, -18)
scale = Vector2(0.04692839, 0.04692839)
sprite_frames = SubResource("SpriteFrames_upybt")
animation = &"Alif"
autoplay = "Alif"
frame_progress = 0.07535542
offset = Vector2(0, -230)

[node name="Area2D" type="Area2D" parent="penjual"]
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="penjual/Area2D"]
position = Vector2(93.51172, -161.36914)
scale = Vector2(1.0000001, 1.0000001)
shape = SubResource("CircleShape2D_672jn")

[node name="speechBuble" type="Sprite2D" parent="penjual"]
z_index = 6
position = Vector2(117.19971, -516.916)
scale = Vector2(1.1506894, 0.8188687)
texture = ExtResource("4_jhk31")

[connection signal="body_entered" from="Sprite2D4/AreaInteraksi" to="." method="_on_area_interaksi_body_entered"]
[connection signal="body_entered" from="penjual/Area2D" to="." method="_on_area_Interaksi_2d_body_entered"]
[connection signal="body_exited" from="penjual/Area2D" to="." method="_on_area_2d_body_exited"]
